--- a/config.json
+++ b/config.json
@@ -5,9 +5,9 @@
 	"autoRead": true,
 	"self": false, 
 	"maxLimit": 30,
-	"ownerList": ["62882006325622@s.whatsapp.net", "62882006325622@s.whatsapp.net"],
+	"ownerList": ["6285966942618@s.whatsapp.net", "6285966942618@s.whatsapp.net"],
 	"apiUrl": "https://api.zeks.me",
     "imgUrl": "https://i.postimg.cc/XNFmqpr1/76271a67a3e6162e0d0f80b1bc1d17f4.jpg",
-	"pack": "Lyra Kawaii",
+	"pack": "Lyra -1",
 	"author": "TrashBot"
 }
